[package]
name = "rustjector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
reqwest = { version = "0.11.4", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
log = "0.4.14"
env_logger = "0.9.0"